ignore test binaries start, start-external

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,7 @@ _testmain.go
 todo.md
 tags
 examples/test/starttest
+examples/test/start
+examples/test/start-external
 realize.yaml
 examples/test/debug
